feat: add more docs info
