# doc/api.yaml
@@ -13,11 +13,13 @@ paths:
               $ref: "#/components/schemas/CreateUserDto"
       responses:
         201:
-          description: ""
+          description: "User created"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+        400:
+          description: "Required fields missing"
       tags:
         - "Users"
     get:
@@ -26,7 +28,7 @@ paths:
       parameters: []
       responses:
         200:
-          description: ""
+          description: "All Users"
           content:
             application/json:
               schema:
@@ -52,6 +54,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "User not exist"
       tags:
         - "Users"
     put:
@@ -71,11 +77,17 @@ paths:
               $ref: "#/components/schemas/UpdatePasswordDto"
       responses:
         200:
-          description: "The found record"
+          description: "User updated"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+        400:
+          description: "Invalid id (not uuid)"
+        403:
+          description: "Password is invalid"
+        404:
+          description: "User not exist"
       tags:
         - "Users"
     delete:
@@ -89,7 +101,11 @@ paths:
             type: "string"
       responses:
         204:
-          description: ""
+          description: "User deleted"
+        400:
+          description: "UUID not valid"
+        404:
+          description: "User not exist"
       tags:
         - "Users"
   /track:
@@ -105,11 +121,13 @@ paths:
               $ref: "#/components/schemas/CreateTrackDto"
       responses:
         201:
-          description: ""
+          description: "Track created"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Track"
+        400:
+          description: "Required fields missing"
       tags:
         - "Tracks"
     get:
@@ -118,7 +136,7 @@ paths:
       parameters: []
       responses:
         200:
-          description: ""
+          description: "All Tracks"
           content:
             application/json:
               schema:
@@ -144,6 +162,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Track"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Track not exist"
       tags:
         - "Tracks"
     put:
@@ -163,11 +185,15 @@ paths:
               $ref: "#/components/schemas/UpdateTrackDto"
       responses:
         200:
-          description: "The found record"
+          description: "Track updated"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Track"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Track not exist"
       tags:
         - "Tracks"
     delete:
@@ -181,7 +207,11 @@ paths:
             type: "string"
       responses:
         204:
-          description: ""
+          description: "Track deleted"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Track not exist"
       tags:
         - "Tracks"
   /artist:
@@ -197,11 +227,13 @@ paths:
               $ref: "#/components/schemas/CreateArtistDto"
       responses:
         201:
-          description: ""
+          description: "Artist created"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Artist"
+        400:
+          description: "Required fields missing"
       tags:
         - "Artists"
     get:
@@ -210,7 +242,7 @@ paths:
       parameters: []
       responses:
         200:
-          description: ""
+          description: "All Artists"
           content:
             application/json:
               schema:
@@ -236,6 +268,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Artist"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Artist not exist"
       tags:
         - "Artists"
     put:
@@ -255,11 +291,15 @@ paths:
               $ref: "#/components/schemas/UpdateArtistDto"
       responses:
         200:
-          description: "The found record"
+          description: "Artist updated"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Artist"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Artist not exist"
       tags:
         - "Artists"
     delete:
@@ -273,7 +313,11 @@ paths:
             type: "string"
       responses:
         204:
-          description: ""
+          description: "Artist deleted"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Artist not exist"
       tags:
         - "Artists"
   /album:
@@ -289,11 +333,13 @@ paths:
               $ref: "#/components/schemas/CreateAlbumDto"
       responses:
         201:
-          description: ""
+          description: "Album created"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Album"
+        400:
+          description: "Required fields missing"
       tags:
         - "Albums"
     get:
@@ -302,7 +348,7 @@ paths:
       parameters: []
       responses:
         200:
-          description: ""
+          description: "All Albums"
           content:
             application/json:
               schema:
@@ -328,6 +374,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Album"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Album not exist"
       tags:
         - "Albums"
     put:
@@ -347,11 +397,15 @@ paths:
               $ref: "#/components/schemas/UpdateAlbumDto"
       responses:
         200:
-          description: "The found record"
+          description: "Album updated"
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Album"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Album not exist"
       tags:
         - "Albums"
     delete:
@@ -365,7 +419,11 @@ paths:
             type: "string"
       responses:
         204:
-          description: ""
+          description: "Album deleted"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Album not exist"
       tags:
         - "Albums"
   /favs:
@@ -375,7 +433,7 @@ paths:
       parameters: []
       responses:
         200:
-          description: ""
+          description: "All Favorites"
           content:
             application/json:
               schema:
@@ -396,11 +454,11 @@ paths:
             type: "string"
       responses:
         201:
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: "string"
+          description: "Added to favorites"
+        400:
+          description: "Invalid id (not uuid)"
+        422:
+          description: "Item not existed"
       tags:
         - "Favorites"
     delete:
@@ -414,7 +472,11 @@ paths:
             type: "string"
       responses:
         204:
-          description: ""
+          description: "Deleted from favorites"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Item not in favorites"
       tags:
         - "Favorites"
   /favs/album/{id}:
@@ -429,11 +491,11 @@ paths:
             type: "string"
       responses:
         201:
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: "string"
+          description: "Added to favorites"
+        400:
+          description: "Invalid id (not uuid)"
+        422:
+          description: "Item not existed"
       tags:
         - "Favorites"
     delete:
@@ -447,7 +509,11 @@ paths:
             type: "string"
       responses:
         204:
-          description: ""
+          description: "Deleted from favorites"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Item not in favorites"
       tags:
         - "Favorites"
   /favs/artist/{id}:
@@ -462,11 +528,11 @@ paths:
             type: "string"
       responses:
         201:
-          description: ""
-          content:
-            application/json:
-              schema:
-                type: "string"
+          description: "Added to favorites"
+        400:
+          description: "Invalid id (not uuid)"
+        422:
+          description: "Item not existed"
       tags:
         - "Favorites"
     delete:
@@ -480,7 +546,11 @@ paths:
             type: "string"
       responses:
         204:
-          description: ""
+          description: "Deleted from favorites"
+        400:
+          description: "Invalid id (not uuid)"
+        404:
+          description: "Item not in favorites"
       tags:
         - "Favorites"
 info:
@@ -513,10 +583,6 @@ components:
           type: "string"
           example: "user@gmail.com"
           description: "User login"
-        password:
-          type: "string"
-          example: "12345678"
-          description: "Password"
         version:
           type: "number"
           example: "1"
@@ -532,7 +598,6 @@ components:
       required:
         - "id"
         - "login"
-        - "password"
         - "version"
         - "createdAt"
         - "updatedAt"
