# src/routes/artist/artist.controller.ts
@@ -1,11 +1,4 @@
-import {
-  Body,
-  Controller,
-  Get,
-  Param,
-  ParseUUIDPipe,
-  Post,
-} from '@nestjs/common';
+import { Body, Controller, Get, Param, ParseUUIDPipe, Post } from '@nestjs/common';
 import { ArtistService } from './artist.service';
 import { Delete, HttpCode, Put } from '@nestjs/common/decorators';
 import { CreateArtistDto } from './dto/create-artist.dto';
@@ -23,47 +16,44 @@ const docs = {
 export class ArtistController {
   constructor(private artistService: ArtistService) {}
 
-  @ApiOperation({ summary: `Create ${docs.entity}` })
-  @ApiResponse({ status: 201, type: docs.type })
   @Post()
+  @ApiOperation({ summary: `Create ${docs.entity}` })
+  @ApiResponse({ status: 201, description: `${docs.entity} created`, type: docs.type })
+  @ApiResponse({ status: 400, description: 'Required fields missing' })
   async create(@Body() dto: CreateArtistDto) {
     return this.artistService.create(dto);
   }
 
-  @ApiOperation({ summary: `Get all ${docs.entity}s` })
-  @ApiResponse({ status: 200, type: [docs.type] })
   @Get()
+  @ApiOperation({ summary: `Get all ${docs.entity}s` })
+  @ApiResponse({ status: 200, description: `All ${docs.entity}s`, type: [docs.type] })
   async findAll() {
     return this.artistService.findAll();
   }
 
   @Get(':id')
   @ApiOperation({ summary: `Get ${docs.entity} by ID` })
-  @ApiResponse({
-    status: 200,
-    description: 'The found record',
-    type: docs.type,
-  })
+  @ApiResponse({ status: 200, description: 'The found record', type: docs.type })
+  @ApiResponse({ status: 400, description: 'Invalid id (not uuid)' })
+  @ApiResponse({ status: 404, description: `${docs.entity} not exist` })
   async findOne(@Param('id', ParseUUIDPipe) uuid: string) {
     return this.artistService.findOne(uuid);
   }
 
   @Put(':id')
   @ApiOperation({ summary: `Update ${docs.entity} by ID` })
-  @ApiResponse({
-    status: 200,
-    description: 'The found record',
-    type: docs.type,
-  })
-  async update(
-    @Body() dto: UpdateArtistDto,
-    @Param('id', ParseUUIDPipe) uuid: string,
-  ) {
+  @ApiResponse({ status: 200, description: `${docs.entity} updated`, type: docs.type })
+  @ApiResponse({ status: 400, description: 'Invalid id (not uuid)' })
+  @ApiResponse({ status: 404, description: `${docs.entity} not exist` })
+  async update(@Body() dto: UpdateArtistDto, @Param('id', ParseUUIDPipe) uuid: string) {
     return this.artistService.update(uuid, dto);
   }
 
   @Delete(':id')
   @ApiOperation({ summary: `Delete ${docs.entity} by ID` })
+  @ApiResponse({ status: 204, description: `${docs.entity} deleted` })
+  @ApiResponse({ status: 400, description: 'Invalid id (not uuid)' })
+  @ApiResponse({ status: 404, description: `${docs.entity} not exist` })
   @HttpCode(204)
   async delete(@Param('id', ParseUUIDPipe) uuid: string) {
     return this.artistService.delete(uuid);
